--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -10,7 +10,7 @@ comments: true
 toc: true
 render_with_liquid: true
 image:
-  src: /Casino_Noche.png
+  src: /img/Casino_Noche.png
   width: 800
   height: 500
 ---
@@ -78,4 +78,3 @@ Hemos Migrado a un servidor con un Intel Core I7 y 16gb de ram con un SSD de 500
 
 El servidor usa una versión modificada de minecraft que se llama [PaperMC](https://papermc.io/)
 Usa plugins, algo parecido a los mods, pero no anañden bloques nuevos, sino que se basan en la base de minecaft, y nos permite que cualquier usuario pueda acceder fácilmente.
-
