--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -1,11 +1,10 @@
 ---
-title: SpainMC
-author:
-  name: Tomas Palma
-  link: https://blog.tomasps.tk/posts/spainmc/
+title: SpainRP
+author: Tomas Palma
+link: https://blog.tomasps.tk/posts/SpainRP/
 date: 2022-02-17 10:28:00 +0800
 categories: [SpainMC]
-tags: [papermc, minecraft, server, spainmc, plugins]
+tags: [papermc, minecraft, server, spainrp, plugins]
 comments: true
 toc: true
 render_with_liquid: true
