--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -7,11 +7,8 @@ categories: [SpainMC]
 tags: [papermc, minecraft, server, spainrp, plugins]
 comments: true
 toc: true
-render_with_liquid: true
 image:
-  src: /img/Casino_Noche.png
-  width: 800
-  height: 500
+  path: /img/Casino_Noche.
 ---
 > Ultima actualizacion de la pagina: [26/5/2022 - 7:27 PM]
 
