--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -1,6 +1,6 @@
 ---
 title: SpainRP
-author: Tomas Palma
+author: tomas
 link: https://blog.tomasps.tk/posts/SpainRP/
 date: 2022-02-17 10:28:00 +0800
 categories: [SpainMC]
@@ -8,7 +8,7 @@ tags: [papermc, minecraft, server, spainrp, plugins]
 comments: true
 toc: true
 image:
-  path: /img/Casino_Noche.
+  path: /img/Casino_Noche.png
 ---
 > Ultima actualizacion de la pagina: [26/5/2022 - 7:27 PM]
 
