--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -56,7 +56,7 @@ Por ahora solo te puedes unir mediante una invitacion o accediendo al [servidor 
 
 # Video
 
-[![Enlace al Video](https://img.youtube.com/vi/UqOT1DzcRMo/maxresdefault.jpg)](https://youtu.be/UqOT1DzcRMo)
+[![Enlace al Video](https://img.youtube.com/vi/UqOT1DzcRMo/maxresdefault.png)](https://youtu.be/UqOT1DzcRMo)
 
 
 # Proyecto IES JC1
