--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -7,6 +7,7 @@ categories: [SpainMC]
 tags: [papermc, minecraft, server, spainrp, plugins]
 comments: true
 toc: true
+pin: true
 image:
   path: /img/Casino_Noche.png
 ---
