--- a/_posts/2022-2-25-SpainMC.md
+++ b/_posts/2022-2-25-SpainMC.md
@@ -9,7 +9,7 @@ comments: true
 toc: true
 pin: true
 image:
-  path: /img/Casino_Noche.png
+  path: /assets/img/Casino_Noche.png
 ---
 > Ultima actualizacion de la pagina: [26/5/2022 - 7:27 PM]
 
